k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-log-deployment
  namespace: kidneysmart-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-log
  template:
    metadata:
      labels:
        app: api-log
    spec:
      containers:
      - name: api-log
        image: wayofdt/kidneysmart-api-log:v0.0.3
        ports:
        - containerPort: 8001
        imagePullPolicy: Always
