k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-log-service
  namespace: kidneysmart-dev
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: api-log
