k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-log-ingress
  namespace: kidneysmart
spec:
  tls:
  - hosts:
    - logs-dev-kidneysmart.wayofdt.com
  rules:
  - host: logs-dev-kidneysmart.wayofdt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-log-service
            port:
              number: 8001
