k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-log-ingress
  namespace: kidneysmart-dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kidneysmart-dev-log.wayofdt.com
    secretName: secret-tls
  rules:
  - host: kidneysmart-dev-log.wayofdt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-log-service
            port:
              number: 8001
